--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- metadata about the HTML document as a whole -->
+       <title>Love programming!</title>
  
     </head>
  
     <body>
-        <!-- content of our page will be here! -->
+        
  
     </body>
 </html>
